--- a/Games/Games.html
+++ b/Games/Games.html
@@ -7,12 +7,13 @@
   <title>Gradrechner</title>
  </head>
  <body>
-  <div id="header">
-      <ul id="nav">
-          <li><h2><a href="../index.html">Startseite</a></h2></li>
-          <li><h2><a href="Tic-Tac-Toe/Tic-Tac-Toe.html">Tic-Tac-Toe</a><h2></li>
-          <li><h2><a href="Hangman/Hangman.html">Hangman</a><h2></li>
-      </ul>
-  </div>
+     <button id="headerButton" onclick="Navi()">Navi</button>
+     <div id="header">
+         <ul id="nav">
+             <li><h2><a href="../index.html">Startseite</a></h2></li>
+             <li><h2><a href="Tic-Tac-Toe/Tic-Tac-Toe.html">Tic-Tac-Toe</a></h2></li>
+             <li><h2><a href="Hangman/Hangman.html">Hangman</a></h2></li>
+         </ul>
+     </div>
  </body>
 </html>
