--- a/Games/Hangman/Hangman.html
+++ b/Games/Hangman/Hangman.html
@@ -8,6 +8,8 @@
  </head>
  <body>
 
+     <button id="headerButton" onclick="Navi()">Navi</button>
+
      <div id="header">
          <ul id="nav">
              <li><h2><a href="../../index.html">Startseite</a></h2></li>
@@ -47,7 +49,7 @@
 
      <script src="Hangman2.js" charset="UTF-8"></script>
      <script>
-    var start_text = document.getElementById("Text");
+         var start_text = document.getElementById("Text");
          start_text.innerHTML = "Bitte Wort eingeben";
      </script>
  </body>
