--- a/Rechner/Gradwertrechner.html
+++ b/Rechner/Gradwertrechner.html
@@ -7,7 +7,7 @@
   <title>Gradrechner</title>
  </head>
  <body>
-     <button id="headerButton" onclick="sers()">Navi</button>
+     <button id="headerButton" onclick="Navi()">Navi</button>
      <div id="header">
          <ul id="nav">
              <li><h2><a href="../index.html">Startseite</a></h2></li>
