--- a/Tabellen/Tabellen.html
+++ b/Tabellen/Tabellen.html
@@ -7,11 +7,12 @@
   <title>Gradrechner</title>
  </head>
  <body>
-  <div id="header">
-   <ul id="nav">
-    <li><h2><a href="../index.html">Startseite</a></h2></li>
-    <li><h2><a href="IsoGewindeTabelle.html">Iso-Gewinde-Tabelle</a></h2></li>
-   </ul>
-  </div>
+     <button id="headerButton" onclick="Navi()">Navi</button>
+     <div id="header">
+         <ul id="nav">
+             <li><h2><a href="../index.html">Startseite</a></h2></li>
+             <li><h2><a href="IsoGewindeTabelle.html">Iso-Gewinde-Tabelle</a></h2></li>
+         </ul>
+     </div>
  </body>
 </html>
