--- a/Games/Games.html
+++ b/Games/Games.html
@@ -3,7 +3,7 @@
  <head>
   <link rel="stylesheet" href="../Style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <script src="Script.js" charset="UTF-8"></script>
+  <script src="../Script.js" charset="UTF-8"></script>
   <title>Gradrechner</title>
  </head>
  <body>
@@ -13,6 +13,7 @@
              <li><h2><a href="../index.html">Startseite</a></h2></li>
              <li><h2><a href="Tic-Tac-Toe/Tic-Tac-Toe.html">Tic-Tac-Toe</a></h2></li>
              <li><h2><a href="Hangman/Hangman.html">Hangman</a></h2></li>
+             <li><h2><a href="Snake/Snake.html">Snake</a></h2></li>
          </ul>
      </div>
  </body>
