--- a/Games/Hangman/Hangman.html
+++ b/Games/Hangman/Hangman.html
@@ -15,6 +15,7 @@
              <li><h2><a href="../../index.html">Startseite</a></h2></li>
              <li><h2><a href="../Tic-Tac-Toe/Tic-Tac-Toe.html">Tic-Tac-Toe</a></h2></li>
              <li><h2><a href="Hangman.html">Hangman</a></h2></li>
+             <li><h2><a href="../Snake/Snake.html">Snake</a></h2></li>
          </ul>
      </div>
 
