--- a/Games/Snake/Snake.html
+++ b/Games/Snake/Snake.html
@@ -20,15 +20,15 @@
 
     <div id="Game">
         <div>
-            <h2><a id="score">Score: 25</a></h2>
+            <h2><a id="score">Score: 24</a></h2>
         </div>
 
         <div>
-            <button onclick="freeBodypixel()">Spiel starten</button>
+            <button onclick="game()">Spiel starten</button>
         </div>
 
         <div id="Leinwand">
-            <canvas id="canvas" width="300" height="300"></canvas>
+            <canvas id="canvas" width="315" height="315"></canvas>
         </div>
     </div>
     <div>
