--- a/Games/Snake/Snake.html
+++ b/Games/Snake/Snake.html
@@ -26,6 +26,7 @@
 
         <div>
             <button onclick="gameloop()">Spiel starten</button>
+            <button onclick="restart()">Restart</button>
         </div>
 
         <div id="Leinwand">
