--- a/Games/Snake/Snake.html
+++ b/Games/Snake/Snake.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript" src="jQuery.js"></script>
+    <script type="text/javascript" src="swipe.js"></script>
     <link rel="stylesheet" href="Snake.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Snake</title>
