--- a/Games/Snake/Snake.html
+++ b/Games/Snake/Snake.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <script type="text/javascript" src="swipe.js"></script>
+    <script>history.scrollRestoration = "manual"</script>
     <link rel="stylesheet" href="Snake.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Snake</title>
