--- a/Games/Snake/Snake.html
+++ b/Games/Snake/Snake.html
@@ -21,12 +21,12 @@
 
     <div id="Game">
         <div>
-            <h2><a id="score"></a></h2>
+            <h2><a id="highScore"></a></h2><h2><a id="score"></a></h2>
         </div>
 
         <div>
-            <button onclick="gameloop()">Spiel starten</button>
-            <button onclick="restart()">Restart</button>
+            <button id="start" onclick="gameloop()">Spiel starten</button>
+            <button id="restart" onclick="restart()">Restart</button>
         </div>
 
         <div id="Leinwand">
