--- a/Rechner/Gradwertrechner.html
+++ b/Rechner/Gradwertrechner.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <link rel="stylesheet" href="../Style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <script src="../Script.js" charset="UTF-8"></script>
-  <title>Gradrechner</title>
- </head>
+<head>
+    <link rel="stylesheet" href="../Style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <script src="../Script.js" charset="UTF-8"></script>
+    <title>Gradrechner</title>
+</head>
  <body>
      <button id="headerButton" onclick="Navi()">Navi</button>
      <div id="header">
@@ -40,6 +40,8 @@
          <!--Berechnungsbutton-->
          <button id="Gradbutton" onclick="Berechnen()">Berechnen</button>
          <br><br>
+         <!--Speicherfunktionen-->
+         <button id="speichern" onclick="speichern()">Speichern</button> <button id="speicherAnzeige" onclick="speicherAnzeige()">Anzeige</button> <button id="löschen" onclick="löschen()">Löschen</button> 
      </div>
      <!--Anzeige-->
      <div id="Anzeige"> </div>
