--- a/Rechner/Gradwertrechner.html
+++ b/Rechner/Gradwertrechner.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="../Style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <script src="../Script.js" charset="UTF-8"></script>
+    <script src="../Rechner/Gradwertrechner.js" charset="UTF-8"></script>
     <title>Gradrechner</title>
 </head>
  <body>
@@ -41,7 +41,7 @@
          <button id="Gradbutton" onclick="Berechnen()">Berechnen</button>
          <br><br>
          <!--Speicherfunktionen-->
-         <button id="speichern" onclick="speichern()">Speichern</button> <button id="speicherAnzeige" onclick="speicherAnzeige()">Anzeige</button> <button id="löschen" onclick="löschen()">Löschen</button> 
+         <button id="speichern" onclick="speichern()">Speichern</button> <button id="speicherAnzeige" onclick="speicherAnzeige()">Anzeige</button> <button id="löschen" onclick="löschen()">Loeschen</button> 
      </div>
      <!--Anzeige-->
      <div id="Anzeige"> </div>
