--- a/Rechner/Gradwertrechner.html
+++ b/Rechner/Gradwertrechner.html
@@ -41,7 +41,7 @@
          <button id="Gradbutton" onclick="Berechnen()">Berechnen</button>
          <br><br>
          <!--Speicherfunktionen-->
-         <button id="speichern" onclick="speichern()">Speichern</button> <button id="speicherAnzeige" onclick="speicherAnzeige()">Anzeige</button> <button id="löschen" onclick="löschen()">Loeschen</button> 
+         <button id="speichern" onclick="speichern()">Speichern</button> <button id="speicherAnzeige" onclick="speicherAnzeige()">Anzeigen</button> 
      </div>
      <!--Anzeige-->
      <div id="Anzeige"> </div>
