--- a/Rechner/Gradwertrechner.html
+++ b/Rechner/Gradwertrechner.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../Style.css">
+    <link rel="stylesheet" href="../Rechner/Gradwertrechner.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <script src="../Rechner/Gradwertrechner.js" charset="UTF-8"></script>
     <title>Gradrechner</title>
