--- a/Games/Escape/Escape.html
+++ b/Games/Escape/Escape.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <script type="text/javascript" src="swipe.js"></script>
-    <link rel="stylesheet" href="Snake.css">
+    <link rel="stylesheet" href="Escape.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Snake</title>
+    <title>Escape</title>
 </head>
 <body>
 
@@ -15,14 +15,14 @@
             <li><h2><a href="../../index.html">Startseite</a></h2></li>
             <li><h2><a href="../Tic-Tac-Toe/Tic-Tac-Toe.html">Tic-Tac-Toe</a></h2></li>
             <li><h2><a href="../Hangman/Hangman.html">Hangman</a></h2></li>
-            <li><h2><a href="Snake.html">Snake</a></h2></li>
-            <li><h2><a href="../Escape/Escape.html">Escape</a></h2></li>
+            <li><h2><a href="../Snake/Snake.html">Snake</a></h2></li>
+            <li><h2><a href="Escape.html">Escape</a></h2></li>
         </ul>
     </div>
 
     <div id="Game">
         <div>
-            <h2><a id="highScore"></a></h2><h2><a id="score"></a></h2>
+            <h2><a id="level"></a></h2>
         </div>
 
         <div>
@@ -31,11 +31,11 @@
         </div>
 
         <div id="Leinwand">
-            <canvas id="canvas" width="315" height="315"></canvas>
+            <canvas id="canvas" width="320" height="320"></canvas>
         </div>
     </div>
     <div>
-    <script src="Snake.js" charset="UTF-8"></script>
+    <script src="Escape.js" charset="UTF-8"></script>
     </div>
 </body>
 </html>
