--- a/Games/Games.html
+++ b/Games/Games.html
@@ -14,6 +14,7 @@
              <li><h2><a href="Tic-Tac-Toe/Tic-Tac-Toe.html">Tic-Tac-Toe</a></h2></li>
              <li><h2><a href="Hangman/Hangman.html">Hangman</a></h2></li>
              <li><h2><a href="Snake/Snake.html">Snake</a></h2></li>
+             <li><h2><a href="Escape/Escape.html">Escape</a></h2></li>
          </ul>
      </div>
  </body>
